# bcoin-bot

./: Cargo.toml  README.md  config.json
src/: config.rs  element.rs  flow.rs  lib.rs  main.rs  matching.rs  smooth_movement.rs  util.rs
