[package]
name = "bcbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
enigo = "0.0.14"
scrap = "0.5"
opencv = "0.60.0"
reqwest = "0.11.7"
tokio = { version = "1.14.0", features = ["full"] }
imageproc = "0.22.0"